tests/test-dirs/upstream-typing-recovery/original-tests/or_pattern_type_clash.compilers.reference
File "or_pattern_type_clash.ml", line 1:
Error: Multiple errors were encountered
File "or_pattern_type_clash.ml", line 12, characters 4-19:
12 |   | (x, _) | (_, x) -> x
         ^^^^^^^^^^^^^^^
  The variable x on the left-hand side of this or-pattern has type int
  but on the right-hand side it has type string
File "or_pattern_type_clash.ml", line 12, characters 23-24:
12 |   | (x, _) | (_, x) -> x
                            ^
  Unbound value x
File "or_pattern_type_clash.ml", line 16, characters 8-9:
16 | let y = x ^ "ocaml"
             ^
  The value x has type int but an expression was expected of type string
